# LANA

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: add-census-domain.md  warehouse-verifier.md
.github/workflows/: ci.yml
data/reference/: asp_2001_single_year.csv  geo_correspondence_2021.csv  phn_2023_to_SA2_2021.csv
reference/: dataflows.md  phidu_methods.md
src/lana/: __init__.py  abs_client.py  attribution.py  config.py  constants.py  extract.py  facts.py  geography.py  indicators.py  normalise.py  normalize.py  pipeline.py  registry.py  standardise.py  standardize.py  warehouse.py  workbook.py
tests/: test_abs_client.py  test_attribution.py  test_extract.py  test_facts.py  test_geography.py  test_indicators.py  test_normalise.py  test_normalize.py  test_registry.py  test_standardise.py  test_standardize.py  test_warehouse.py
