[project]
name = "lana"
version = "0.1.0"
description = "Local & Regional Area Needs Assessment — ABS Census + SEIFA extraction and synthesis pipeline"
readme = "README.md"
license = "CC-BY-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.18",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "xlsxwriter>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lana = "lana.pipeline:main"
lana-warehouse = "lana.pipeline:warehouse_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lana"]

[tool.pytest.ini_options]
testpaths = ["tests"]
