[project]
name = "lana"
version = "0.1.0"
description = "Local & Regional Area Needs Assessment — ABS Census + SEIFA extraction and synthesis pipeline"
readme = "README.md"
license = "CC-BY-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.18",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "xlsxwriter>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.13"]

[project.scripts]
lana = "lana.pipeline:main"
lana-warehouse = "lana.pipeline:warehouse_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lana"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E4/E7/E9 (not E5) so the formatter owns line width and E501 doesn't nag long data strings.
select = ["E4", "E7", "E9", "F", "I", "W"]

[tool.mypy]
ignore_missing_imports = true
files = ["src"]
